# aratrust-eval

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
docs/: IMPROVEMENT_PLAN.md  analysis_run1_vs_run2.md
lm_eval_tasks/aratrust/: aratrust.yaml
notebooks/: AraTrust_Comparison.ipynb
results/: eval_v1.0_zero_shot.csv  eval_v1.0_zero_shot_incorrect.csv
results/runs/: comparison_summary.csv  run_deepseek-r1-0528_aratrust_eval_001.csv  run_deepseek-v3p1-terminus_aratrust_eval_001.csv  run_qwen3-235b-a22b-instruct-2507_aratrust_eval_001.csv  run_qwen3-235b-a22b-thinking-2507_aratrust_eval_001.csv  run_qwen3-235b-a22b-thinking-2507_aratrust_eval_002.csv
scripts/: analyze_persistent_errors.py  compare_methods.py  compare_runs.py  investigate_ethics_csv.py  investigate_offensive.py  investigate_samples.py
src/: __init__.py  base_client.py  config.py  data_loader.py  dataset_utils.py  evaluator.py  llm_client.py  main.py  prompt_templates.py  utils_parser.py
